--- a/bio.html
+++ b/bio.html
@@ -10,7 +10,13 @@
 <body>
 	<h1>Bio | Katherine Mimmack</h1>
 
-	<p>I was born with glass bones and paper skin. Every morning I break my legs, and every afternoon I break my arms. At night, I lie awake in agony until my heart attacks put me to sleep.</p>
+	<p> I was born with glass bones and paper 
+		skin. Every morning I break my legs, and every 
+		afternoon I break my arms. At night, I lie awake in 
+		agony until my heart attacks put me to sleep. As you 
+		can imagine, my medical bills are extremely high, but 
+		luckily, I am able to keep myself alive by selling 
+		chocolate bars.</p>
 </body>
 
 </html>
