--- a/bio.html
+++ b/bio.html
@@ -4,11 +4,11 @@
 <!-- Biography File -->
 
 <head>
-	<title>Bio | Katherine Mimmack</title>
+	<title>Bio | Kayden Mimmack</title>
 </head>
 
 <body>
-	<h1>Bio | Katherine Mimmack</h1>
+	<h1>Bio | Kayden Mimmack</h1>
 
 	<p> I was born with glass bones and paper 
 		skin. Every morning I break my legs, and every 
