--- a/bio.html
+++ b/bio.html
@@ -12,8 +12,11 @@
 <body>
 	<h1>Bio | Kayden Mimmack</h1>
 
-	<p> I was born with glass bones and paper 
-		skin. Every morning I break my legs, and every 
+	<p> I was born with
+		<span class="angry"> glass bones </span> 
+		and 
+		<span class="angry"> paper skin. </span> 
+		Every morning I break my legs, and every 
 		afternoon I break my arms. At night, I lie awake in 
 		agony until my heart attacks put me to sleep. As you 
 		can imagine, my medical bills are extremely high, but 
